@@ -9,7 +9,7 @@ use Apache::AuthCookie::Util;
 use Apache::Util qw(escape_uri);
 use vars qw($VERSION);
 
-# $Id: AuthCookie.pm.mp1,v 1.13 2005-04-15 03:57:14 mschout Exp $
+# $Id: AuthCookie.pm.mp1,v 1.14 2005-04-15 04:40:20 mschout Exp $
 $VERSION = '3.07pre';
 
 sub recognize_user ($$) {
@@ -406,8 +406,16 @@ sub cookie_string {
     $string .= "; domain=$domain";
   }
 
-  $string .= '; secure' if $r->dir_config("${auth_name}Secure");
-  
+  if ($r->dir_config("${auth_name}Secure")) {
+    $string .= '; secure';
+  }
+
+  # HttpOnly is an MS extension.  See
+  # http://msdn.microsoft.com/workshop/author/dhtml/httponly_cookies.asp
+  if ($r->dir_config("${auth_name}HttpOnly")) {
+    $string .= '; HttpOnly';
+  }
+
   return $string;
 }
 
@@ -460,6 +468,11 @@ MethodHandlers, Authen, and Authz compiled in.
 
  # Use this to only send over a secure connection
  PerlSetVar WhatEverSecure 1
+
+ # to enable the HttpOnly cookie property, use HttpOnly.
+ # this is an MS extension.  See
+ # http://msdn.microsoft.com/workshop/author/dhtml/httponly_cookies.asp
+ PerlSetVar WhatEverHttpOnly 1
 
  # Usually documents are uncached - turn off here
  PerlSetVar WhatEverCache 1
@@ -960,7 +973,7 @@ implement anything, though.
 
 =head1 CVS REVISION
 
-$Id: AuthCookie.pm.mp1,v 1.13 2005-04-15 03:57:14 mschout Exp $
+$Id: AuthCookie.pm.mp1,v 1.14 2005-04-15 04:40:20 mschout Exp $
 
 =head1 AUTHOR
 
