@@ -18,7 +18,7 @@ use Data::Dumper; # XXX for debugging
 use Apache::Const qw(:common M_GET HTTP_FORBIDDEN HTTP_MOVED_TEMPORARILY);
 use vars qw($VERSION);
 
-# $Id: AuthCookie.pm.mp2,v 1.17 2005-04-15 03:57:14 mschout Exp $
+# $Id: AuthCookie.pm.mp2,v 1.18 2005-04-15 04:40:20 mschout Exp $
 $VERSION = '3.07pre';
 
 sub recognize_user {
@@ -485,6 +485,12 @@ sub cookie_string {
         $string .= '; secure';
     }
 
+    # HttpOnly is an MS extension.  See
+    # http://msdn.microsoft.com/workshop/author/dhtml/httponly_cookies.asp
+    if ($r->dir_config("${auth_name}HttpOnly")) {
+        $string .= '; HttpOnly';
+    }
+
     return $string;
 }
 
@@ -556,6 +562,11 @@ MethodHandlers, Authen, and Authz compiled in.
 
  # Use this to only send over a secure connection
  PerlSetVar WhatEverSecure 1
+
+ # to enable the HttpOnly cookie property, use HttpOnly.
+ # this is an MS extension.  See:
+ # http://msdn.microsoft.com/workshop/author/dhtml/httponly_cookies.asp
+ PerlSetVar WhatEverHttpOnly 1
 
  # Usually documents are uncached - turn off here
  PerlSetVar WhatEverCache 1
@@ -1039,7 +1050,7 @@ implement anything, though.
 
 =head1 CVS REVISION
 
-$Id: AuthCookie.pm.mp2,v 1.17 2005-04-15 03:57:14 mschout Exp $
+$Id: AuthCookie.pm.mp2,v 1.18 2005-04-15 04:40:20 mschout Exp $
 
 =head1 AUTHOR
 
