@@ -10,7 +10,7 @@ use Apache::TestRequest qw(GET POST GET_BODY);
 
 Apache::TestRequest::user_agent( reset => 1, requests_redirectable => 0 );
 
-plan tests => 19;
+plan tests => 20;
 
 ok 1;  # we loaded.
 
@@ -33,6 +33,7 @@ ok test_16();
 ok test_17();
 ok test_18();
 ok test_19();
+ok test_20();
 
 sub test_3 {
     my $url = '/docs/index.html';
@@ -289,6 +290,30 @@ sub test_19 {
 
     return ($r->code() == 403);
 }
+
+# Should succeed and cookie should have HttpOnly attribute
+sub test_20 {
+    my $r = POST('/LOGIN-HTTPONLY', [
+        destination  => '/docs/protected/get_me.html',
+        credential_0 => 'programmer',
+        credential_1 => 'Heroo'
+    ]);
+
+    print "# Location: ", $r->header('Location'), "\n",
+          "# Set-Cookie: ", $r->header('Set-Cookie'), "\n",
+          "# Code: ", $r->code, "\n";
+
+    return 0 unless
+       $r->header('Location') eq '/docs/protected/get_me.html';
+
+    return 0 unless 
+        $r->header('Set-Cookie') eq 'Sample::AuthCookieHandler_WhatEver=programmer:Heroo; path=/; HttpOnly';
+
+    return 0 unless $r->code == 302;
+
+    return 1;
+}
+
 
 # get the "expected output" file for a given test and return its contents.
 sub get_expected {
